fix: correct for windows scrollbar bug

--- a/client/index.scss
+++ b/client/index.scss
@@ -516,9 +516,9 @@ body {
   .property-tile {
     width: 25vw;
     height: 25vw;
-    margin-right: 1.7vw !important;
+    margin-right: 2vw !important;
     display: inline-block;
-    margin-bottom: 1.7vw;
+    margin-bottom: 2vw;
   }
 
   .property-tile-name {
